Made it launch Minecraft