@@ -1,5 +1,23 @@
 application {
     mainClass = "ece643.main.MainKt"
+    applicationDefaultJvmArgs = [
+        "-Djava.library.path=/tmp/ece643-minecraft-libs",
+        "--illegal-access=debug",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    ]
+}
+
+dependencies {
+    // https://launchermeta.mojang.com/v1/packages/edfc56a64dfc6430665d745264732db53b0d1b41/1.0.json
+    implementation "net.minecraft:client:b679fea27f2284836202e9365e13a82552092e5d"
+    implementation "net.minecraft:launchwrapper:1.5"
+    implementation "net.sf.jopt-simple:jopt-simple:4.5"
+    implementation "org.ow2.asm:asm-all:4.1"
+    implementation "net.java.jinput:jinput:2.0.5"
+    implementation "net.java.jutils:jutils:1.0.0"
+    implementation "org.lwjgl.lwjgl:lwjgl:2.9.0"
+    implementation "org.lwjgl.lwjgl:lwjgl_util:2.9.0"
+    implementation "org.lwjgl.lwjgl:lwjgl-platform:2.9.0"
 }
 
 jar {
